Solve the following issues   -Remove filter chips on new fields doesn't actually remove filter   -Filtering using new fields not working   -Filter linked fields using ID instead of comparing strings   -Increase detail dialog width and correct its vertical alignment   -Project auto-selection not working properly when editing an existing purchase

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -75,7 +75,7 @@ table.md-table > tbody > tr.md-row:hover {
 
 /* Details Table */
 #details-table {
-	min-width: 500px;
+	min-width: 600px;
 }
 #details-table .empty {
 	color: dimgray;
@@ -87,7 +87,6 @@ table.md-table > tbody > tr.md-row:hover {
 #details-table th,
 #details-table tr {
 	text-align: start;
-	vertical-align: top;
 	font-size: 100%;
 	padding: 5px 5px;
 }
